Some basic fixes

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
-<body class="text-center" background="https://i.imgur.com/uxvZHGF.jpg">
+<body class="text-center" style="background: url('https://i.imgur.com/uxvZHGF.jpg'); box-shadow: inset 0 0 0 1000px rgba(255,255,255,0.7); position: fixed; overflow-y: scroll; width:100%;">
 	<div class="bg-image" style="height: 100vh;">
       <div class="row h-75">
         <div class="col-sm-12 h-100 d-table">
           <div class="d-table-cell align-middle">
-            <h1 class="display-1 text-secondary pb-7">COMING SOON</h1>
+            <h1 class="display-1 text-primary pb-7">COMING SOON</h1>
             <div class="mx-sm-1">
-              <p>I haven't gotten around to making a website yet.<br>For now, here are some links to my projects.</p>
+              <p>I haven't gotten around to making a website yet.<br>For now, here are some links to my projects:</p>
               <a href="https://github.com/stargate-rewritten/Stargate-Bukkit" class="btn btn-dark btn-lg" role="button">Stargate</a>
             </div>
           </div>
@@ -29,6 +29,6 @@
           href="https://unsplash.com/photos/XVITDH19zm8">Unsplash</a></small>
         </p>
       </footer>
-	</div>
-</body>
+    </div>
+  </body>
 </html>
