--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="header centerer">
 		<div>
-			<a class="button" href="home.html"> Home </a>
+			<a class="button" href="index.html"> Home </a>
 			<a class="button" href="about.html"> About </a>
 			<a class="button" href="cv.pdf"> CV </a>
 		</div>
