--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="largeText">My projects</div>
 		<div class="centerer"> 
 			<div>
-				<a class="project" href="sgrewritten.org">Stargate</a>
+				<a class="project" href="https://sgrewritten.org">Stargate</a>
 				<a class="project" href="https://github.com/PhantomMC/PhantomCore">Phantom Server</a>
 				<a class="project" href="https://github.com/stargate-rewritten/ColorBukkit">ColorBukkit</a>
 			</div>
