Changed the homepage a bit

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<div class="largeText">My projects</div>
 		<div class="centerer"> 
 			<div>
-				<a class="project" href="https://sgrewritten.org">Stargate</a>
-				<a class="project" href="https://github.com/PhantomMC/PhantomCore">Phantom Server</a>
-				<a class="project" href="https://github.com/stargate-rewritten/ColorBukkit">ColorBukkit</a>
+				<a class="project" id="stargate" href="https://sgrewritten.org"> <text>Stargate</text></a>
+				<a class="project" id="phantom" href="https://github.com/PhantomMC/PhantomCore"><text>Phantom Server</text></a>
+				<a class="project" id="colorbukkit" href="https://github.com/stargate-rewritten/ColorBukkit"><text>ColorBukkit</text></a>
 			</div>
 		</div>
 	</div>
