Some visual modifications

--- a/about.html
+++ b/about.html
@@ -17,7 +17,8 @@
 		</div>
 	</div>
 	<div class="holder">
-		<text style="font-family: serif;"> <p>Hello there! My name is Hjalmar Gunnarsson, and I'm a 23 year old masters student, with the online alias Thorinwasher (Yes I know that's a stupid name). I'm currently studying material science in Sweden, Uppsala. My master thesis currently have been about solving PDE's of certain geometries for electrochemical battery cells using the finite element method. From that I've learned how to use the FEniCSx python api, and also how to use COMSOL. I'm also a programmer at heart, I have therefore done multiple projects in Java and Python most notably a fix on a bukkit plugin, Stargate.</p> 
+		<div class="largeText">Hello there!</div>
+		<text style="font-family: serif;"> <p>My name is Hjalmar Gunnarsson, and I'm a 23 year old masters student, with the online alias Thorinwasher (Yes I know that's a stupid name). I'm currently studying material science in Sweden, Uppsala. My master thesis currently have been about solving PDE's of certain geometries for electrochemical battery cells using the finite element method. From that I've learned how to use the FEniCSx python api, and also how to use COMSOL. I'm also a programmer at heart, I have therefore done multiple projects in Java and Python most notably a fix on a bukkit plugin, Stargate.</p> 
 		
 		<p>I have always liked to solve komplex problems, or most notably figure out the solution by myself, often reinventing the wheel in retroperspective. A lot of stuff has already been done by another human, therefore what's interesting for me is to do stuff that has not been done yet. If there's anything that you (yes you the reader) would think is within my current reach please contact me</p>
 		
