--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 		</text>
 	</div>
 	<div class="holder">
-		<div class="largeText">My university courses in uppsala university</div>
+		<div class="largeText">My courses in uppsala university</div>
 		<ul>
 			<li>Algebra och geometri</li>
 			<li>Linjär algebra II</li>
