--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
 	</div>
 	<div class="holder">
 		<div class="largeText">My courses in uppsala university</div>
+		<text style="font-family: serif;">
 		<ul>
 			<li>Algebra och geometri</li>
 			<li>Linjär algebra II</li>
@@ -66,6 +67,7 @@
 			<li>Projektkurs i mikro/nanoteknik</li>
 			
 		</ul>
+		</text>
 	</div>
 	<div class="holder">
 		<p> Email: <a href="url">officialHjalmar.Gunnarsson@outlook.com</p>
